--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,24 @@
     height: 30px;
 }
 
+#h1{
+    background: linear-gradient(rgb(0, 128, 0),rgb(0, 128, 0));
+    background-repeat:no-repeat;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-size: 100%;
+}
+
+#h1{
+    animation: textcolor1 1.8s linear infinite alternate;
+}
+
+@keyframes textcolor1 {
+    0%{
+        background-size: 0%;
+    }
+
+    100%{
+        background-size: 100%;
+    }
+}
