--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,23 @@
 #password{
     text-align: center;
 }
+
+#copytext{
+    background-color: white;
+    margin-top: -2px;
+    border: 0;
+    outline: 0;
+    mix-blend-mode: multiply;
+}
+
+#copyimage{
+    width:30px;
+}
+
+.header2{
+    display: flex;
+    gap:5px
+}
+.header2{
+    margin-left:20px 
+}
